//==============================================================================
//  @file       sql_daily_transaction_checksum.proto
//  @ingroup    proto database interface
//  @brief		Operations on transactions
//
//  Messages for daily transactions
//
//  @author     Bart Houkes
//
//------------------------------------------------------------------------------
//  Copyright (c) Bart Houkes, 05-11-2024
//
//  Copyright notice:
//  This software is property of Bart Houkes.
//  Unauthorized duplication and disclosure to third parties is forbidden.
//============================================================================*/

syntax = "proto3";

option csharp_namespace = "GrpcService";

package dtc;

import "common_types.proto";

// Add these Kotlin-specific options
option java_multiple_files = true;
option java_package = "com.hha.daily.checksum";

service DailyTransactionChecksumService
{
    rpc DeleteTransaction(DeleteTransactionRequest)  returns (common.Empty) {}
    rpc Checksum(TransactionId)  returns (common.Empty) {}
    rpc MoveChecksumToArchive(TransactionId)  returns (common.Empty) {}
}

message DeleteTransactionRequest
{
    int32 transaction_id = 1;
}

message TransactionId
{
    int32 transaction_id = 1;
}
